<resources>
    <string name="app_name">MomoQR</string>
    <string name="scanner_tip">Please scan within the framing frame…</string>
    <string name="scan_title">Scan</string>
    <string name="scan_result">Scanning Results</string>
    <string name="scan_via_camera">Scan via camera</string>
    <string name="menu_home">Home</string>
    <string name="menu_fav">Fav</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_exit">Exit</string>
    <string name="nav_others">Others</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="copy_content">Copy</string>
    <string name="scan_cancel">Canceled.</string>
    <string name="double_click_exit">Press again to exit.</string>
    <string name="select_gallery_pic">Pick image from gallery</string>
    <string name="empty_data">Empty data</string>
    <string name="make_qr_code">Create QR Code</string>
    <string name="scan">Scan</string>
    <string name="camera_id">Camera ID</string>
    <string name="beep">Beep sound</string>
    <string name="orientation_locked">Lock orientation</string>
    <string name="identify_type">Types of identification</string>
    <string name="display">Display</string>
    <string name="about_app">About</string>
    <string name="developer">Github@daisukiKaffuChino\nCoolapk@得想办法娶了智乃</string>
    <string name="open_source"><string name="open_source">View source code at <a href="https://github.com/daisukiKaffuChino/MomoQR">Github</a></string></string>
    <string name="cancel">Cancel</string>
    <string name="ok">Confirm</string>
    <string name="text_copied_toast">Text copied success.</string>
    <string name="no_data">No data</string>
    <string name="add_fav">Add to fav</string>
    <string name="input_title">Type a title:</string>
    <string name="input_content">Type content here:</string>
    <string name="add_fav_ok">Success</string>
    <string name="add_fav_fail">Add to fav failed</string>
    <string name="use_current_date">Use current date</string>
    <string name="success">success</string>
    <string name="invalid_title">Invalid title</string>
    <string name="delete_item">Delete Item</string>
    <string name="sure_to_delete">Are you sure you want to delete it? This operation is irreversible.</string>
    <string name="delete_fail">Delete failed</string>
    <string name="delete_all">Delete All</string>
    <string name="no_match_intent">No matched app</string>
    <string name="content_to_generate">Content to be generated</string>
    <string name="theme">Theme</string>
    <string name="theme_enable_m2">Use Material 2</string>
    <string name="theme_m2_sum">Classic theme friendly to old devices</string>
    <string name="theme_dynamic_color">Dynamic color support</string>
    <string name="require_android_s">Requires at least Android 12</string>
    <string name="result_tip_content">1. Long press the QR code below to save the image locally. If your Android version is 10 or above, you can quickly save it to the default directory (optional).\n2. On any Android version, MomoQR doesn\'t need to request storage permission.\n3. Tiles is supported and MomoQR can start scanning through the dropdown status bar.</string>
    <string name="tips">Tips</string>
    <string name="tips_hide">don\'t show again</string>
    <string name="tips_add_tile">Create tile</string>
    <string name="save_ok">Saved</string>
    <string name="save_failed">Save failed</string>
    <string name="create_file_failed">Create file failed</string>
    <string name="storage">Storage</string>
    <string name="not_ask_save_path">Don\'t ask save path</string>
    <string name="require_android_q">Requires at least Android 10</string>
    <string name="toggle_day_night">Toggle Light/Dark</string>
    <string name="flash_light">Flashlight</string>
    <string name="mark_as_important">Mark as Important Content</string>
    <string name="qr_not_prepare_ok">The QR code has not been generated yet</string>
    <string name="start">Start</string>
    <string name="help">Help</string>
    <string name="get_from_clipboard">Get from clipboard</string>
    <string name="create_text">Create text</string>
    <string name="more_type">More types</string>
    <string name="clipboard_error_toast">Clipboard is empty or unsupported type</string>
    <string name="wifi" translatable="false">Wi-Fi</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="apps">Apps</string>
    <string name="wifi_name">Wi-Fi Name</string>
    <string name="security">Security</string>
    <string name="password">Password</string>
    <string name="recipient">Recipient Address</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="supported_code">Supported code</string>
    <string name="how_to_correct_scan">How to scan correctly</string>
    <string name="how_to_correct_scan_content">1. Make sure that the code you want to scan is clearly visible and preferably not tilted.\n2. Avoid light reflections or shadows affecting the swept object.\n3. Keep a proper distance when scanning, and do not make the camera too close, or it may cause out of focus.\n4. If you scan for unsupported types, recognition will fail. Please confirm the graphic code type supported by MomoQR carefully.</string>
    <string name="feedback_and_update">Feedback issues and get updates</string>
    <string name="feedback_and_update_content">To report bugs, visit the <a href="https://github.com/daisukiKaffuChino/MomoQR">Repo of MomoQR</a> to submit an issue. Visit the release page to view all released versions. This is the only channel for MomoQR\'s current release.</string>
</resources>