<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/outline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/outline_favorite_border_24"
            android:title="@string/menu_fav" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/outline_settings_24"
            android:title="@string/menu_settings" />
    </group>

    <item android:title="@string/nav_others">
        <menu>
            <item
                android:id="@+id/nav_about_dialog"
                android:icon="@drawable/outline_info_24"
                android:title="@string/about_app" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/outline_exit_to_app_24"
                android:title="@string/menu_exit" />
        </menu>
    </item>

</menu>