<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="github.daisukiKaffuChino.MomoQR.ui.fragment.HomeFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_nav_home_to_nav_result"
            app:destination="@id/nav_result" />
        <action
            android:id="@+id/action_nav_home_to_nav_edt_dialog"
            app:destination="@id/nav_edt_dialog" />
    </fragment>

    <fragment
        android:id="@+id/nav_fav"
        android:name="github.daisukiKaffuChino.MomoQR.ui.fragment.FavFragment"
        android:label="@string/menu_fav">
        <action
            android:id="@+id/action_nav_fav_to_nav_result"
            app:destination="@id/nav_result" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="github.daisukiKaffuChino.MomoQR.ui.fragment.SettingsFragment"
        android:label="@string/menu_settings" />

    <fragment
        android:id="@+id/nav_result"
        android:name="github.daisukiKaffuChino.MomoQR.ui.fragment.ResultFragment"
        android:label="@string/scan_result">
        <action
            android:id="@+id/action_nav_result_to_nav_edt_dialog"
            app:destination="@id/nav_edt_dialog" />
    </fragment>

    <dialog
        android:id="@+id/nav_edt_dialog"
        android:name="github.daisukiKaffuChino.MomoQR.ui.fragment.EditTextDialogFragment" />

    <dialog
        android:id="@+id/nav_about_dialog"
        android:name="github.daisukiKaffuChino.MomoQR.ui.fragment.AboutDialogFragment" />
</navigation>