<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_to_correct_scan"
            android:textColor="?attr/primaryTextColor"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/how_to_correct_scan_content"
            android:textColor="?attr/secondaryTextColor"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/supported_code"
            android:textColor="?attr/primaryTextColor"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/supported_code"
            app:srcCompat="@drawable/supported_code"
            app:tint="?attr/primaryTextColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/feedback_and_update"
            android:textColor="?attr/primaryTextColor"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/help_feedback_and_update_content_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="48dp"
            android:text="@string/feedback_and_update_content"
            android:textColor="?attr/secondaryTextColor"
            android:textSize="15sp" />
    </LinearLayout>

</ScrollView>