<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/result_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_fav_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:backgroundTint="?attr/colorSecondaryVariant"
        android:text="@string/menu_fav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/copy_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="?attr/colorSecondaryVariant"
        android:text="@string/copy_content"
        app:layout_constraintStart_toStartOf="@+id/add_fav_btn"
        app:layout_constraintTop_toBottomOf="@+id/add_fav_btn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/open_link_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/open"
        app:layout_constraintStart_toStartOf="@+id/copy_btn"
        app:layout_constraintTop_toBottomOf="@+id/copy_btn" />

    <ImageView
        android:id="@+id/remake_code_img"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@+id/open_link_btn"
        app:layout_constraintEnd_toStartOf="@+id/copy_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/add_fav_btn" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/result_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/scan_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remake_code_img">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/result_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>