<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp">

    <ImageView
        android:id="@+id/about_icon_imageView"
        android:layout_width="36sp"
        android:layout_height="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_roundcorner"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/about_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/app_name"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/about_icon_imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/about_ver_subTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@+id/about_icon_imageView"
        app:layout_constraintTop_toBottomOf="@+id/about_name_title"
        tools:text="114514" />

    <TextView
        android:id="@+id/about_author_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/developer"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@+id/about_icon_imageView"
        app:layout_constraintTop_toBottomOf="@+id/about_ver_subTitle" />

    <TextView
        android:id="@+id/about_opensource_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/open_source"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@+id/about_icon_imageView"
        app:layout_constraintTop_toBottomOf="@+id/about_author_text" />
</androidx.constraintlayout.widget.ConstraintLayout>